--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 /**
  * File: frontend/src/index.css
- * STANDARDIZED DESIGN SYSTEM
+ * STANDARDIZED DESIGN SYSTEM (NEW)
  */
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
